# ur5_tcc

./: .gitignore  README.md
src/universal_robot/universal_robots/: package.xml
src/universal_robot/ur_gazebo/launch/: ur5_bringup2.launch
src/universal_robot/ur_gazebo/launch/inc/: ur_control2.launch.xml
src/universal_robot/ur_kinematics/: CMakeLists.txt
src/ur5_tcc/: CMakeLists.txt  package.xml
src/ur5_tcc/bags/: Algoritmo_BFMT.bag  Algoritmo_FMT.bag  Algoritmo_PRM.bag  Algoritmo_RRT.bag  Algoritmo_RRTConnect.bag  Algoritmo_SPARS.bag  Algoritmo_TRRT.bag
src/ur5_tcc/csv/: resultados.csv
src/ur5_tcc/launch/: ur5_tcc.launch  ur5_tcc_rviz.launch
src/ur5_tcc/scripts/: aux_functions.py  auxiliary_functions.py  main.py  move_group_python_interface.py
src/ur5_tcc/scripts/backup/copia/: aux_functions copy.py  main copy.py  move_group_python_interface copy.py
src/ur5_tcc/scripts/backup/copia2/: aux_functions2.py  main2.py  move_group_python_interface2.py
