<?xml version="1.0"?>
<package format="2">
  <name>ur5_tcc</name>
  <version>0.0.0</version>
  <description>
  	Pacote criado por Danilo Dias Conceição da Silva para ser utilizado como 
  	parte do Trabalho de Conclusão de Curso (TCC) do curso de Engenharia da Computação
  	da Universidade Federal da Bahia (UFBA).
  </description>
  
  <author email="danilodias@ufba.br">Danilo Dias Conceição da Silva</author>
  
  <maintainer email="danilodias@ufba.br">Danilo Dias Conceição da Silva</maintainer>
  
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/universal_robots</url>
  <url type="repository">https://github.com/ros-industrial/universal_robot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export></export>
  
</package>
